--- a/server/views/components/days-navigation/template.njk
+++ b/server/views/components/days-navigation/template.njk
@@ -3,9 +3,9 @@
         {%- set thisDate = params.addBusinessDays(params.startDate, days) -%}
         {%- set isToday = params.today == thisDate.format('yyyy-MM-DD') -%}
         {%- set isCurrentDate = params.currentDate.isSame(thisDate.format('yyyy-MM-DD')) -%}
-        <{{ "span" if isCurrentDate else "a" }} class="pac-days-navigation-item{{ " pac-days-navigation-item__link" if not isCurrentDate }}{{ " calendar-nav-link-today" if isToday and not isCurrentDate }}"{% if not isCurrentDate %} href="{{ params.baseUrl + '/' + thisDate.format('yyyy-MM-DD') }}"{% else %} aria-current="date"{% endif %}>
+        <{{ "span" if isCurrentDate else "a" }} class="pac-days-navigation-item{{ " pac-days-navigation-item__link" if not isCurrentDate }}{{ " calendar-nav-link-today" if isToday and not isCurrentDate }}"{% if not isCurrentDate %} href="{{ params.baseUrl + '/' + thisDate.format('yyyy-MM-DD') }}"{% else %} aria-current="date"{% endif %} aria-labelledby="{{ thisDate.format('ddd') }} {{ thisDate.format('D') }}">
 
-            <span>{{ thisDate.format('ddd') }} </span>
+            <span>{{ thisDate.format('ddd') }}</span>
             <span class="govuk-!-font-size-24 govuk-!-font-weight-bold">{{ thisDate.format('D') }}</span>
 
         </{{ "span" if isCurrentDate else "a" }}>
