PIC-2148: Fix class of a hidden element

--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -335,7 +335,7 @@
             </div>
 
             <dl class="govuk-grid-column-two-thirds govuk-!-margin-top-0">
-                <dt hidden="true">Acceptable</dt>
+                <dt class="govuk-visually-hidden">Acceptable</dt>
 
                 <dd class="govuk-!-margin-left-0">
                     <span class="govuk-heading-m govuk-!-margin-bottom-1 pac-dashboard-count">{{ attendedAppointments.complied | length }}</span>
@@ -376,7 +376,7 @@
             </div>
 
             <dl class="govuk-grid-column-two-thirds govuk-!-margin-top-0 govuk-heading-m govuk-!-margin-bottom-1">
-                <dt hidden="true">Unacceptable</dt>
+                <dt class="govuk-visually-hidden">Unacceptable</dt>
                 <dd class="govuk-!-margin-left-0">
                     <span class="pac-dashboard-count">{{ attendedAppointments.failed | length }}</span>
                     <span class="govuk-body govuk-!-font-weight-bold govuk-!-margin-left-0 govuk-!-margin-bottom-0 govuk-!-display-inline-block">Attendances</span>
