--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -38,8 +38,12 @@
 {% block caseContent %}
 
     <div class="govuk-grid-row">
-        <div class="govuk-grid-column-full">
+        <div class="govuk-grid-column-three-quarters">
             <h1 class="govuk-heading-l">Case summary</h1>
+
+        </div>
+        <div hidden class="govuk-grid-column-one-quarter">
+            <a class="govuk-link" href="{{ caseHistoryUrl }}">View case history (&#946;)</a>
         </div>
     </div>
 
