PIC-2360: put past cases navigation behind feture toggle

--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -198,7 +198,8 @@
             totalDays: totalDays,
             startDate: useStartDate,
             currentDate: currentDate,
-            today: today
+            today: today,
+            enablePastCasesNavigation: params.enablePastCasesNavigation
         }) }}
     {% else %}
         <nav class="govuk-body govuk-!-margin-bottom-6" aria-label="Date navigation">
