--- a/server/views/components/days-navigation/template.njk
+++ b/server/views/components/days-navigation/template.njk
@@ -3,7 +3,7 @@
         {%- set thisDate = params.addBusinessDays(params.startDate, days) -%}
         {%- set isToday = params.today == thisDate.format('yyyy-MM-DD') -%}
         {%- set isCurrentDate = params.currentDate.isSame(thisDate.format('yyyy-MM-DD')) -%}
-        <{{ "span" if isCurrentDate else "a" }} class="pac-days-navigation-item{{ " pac-days-navigation-item__link" if not isCurrentDate }}{{ " calendar-nav-link-today" if isToday and not isCurrentDate }}"{% if not isCurrentDate %} href="{{ params.baseUrl + '/' + thisDate.format('yyyy-MM-DD') }}"{% else %} aria-current="date"{% endif %} aria-label="{{ thisDate.format('dddd D')}}">
+        <{{ "span" if isCurrentDate else "a" }} class="pac-days-navigation-item{{ " pac-days-navigation-item__link" if not isCurrentDate }}{{ " calendar-nav-link-today" if params.enablePastCasesNavigation and isToday and not isCurrentDate }}"{% if not isCurrentDate %} href="{{ params.baseUrl + '/' + thisDate.format('yyyy-MM-DD') }}"{% else %} aria-current="date"{% endif %} aria-label="{{ thisDate.format('dddd D')}}">
 
             <span>{{ thisDate.format('ddd') }}</span>
             <span class="govuk-!-font-size-24 govuk-!-font-weight-bold">{{ thisDate.format('D') }}</span>
