--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -168,6 +168,7 @@
         <div class="govuk-grid-column-one-third"></div>
     </div>
 
+    {% if enableCaseComments %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds" id="caseComments">
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
@@ -186,15 +187,15 @@
                         <span class="govuk-visually-hidden">Error:</span> Enter a comment
                     </p>
                 {% endif %}
-                <form method="post" action="comment">
+                <form method="post" action="summary/comments">
                     <textarea class="govuk-textarea{{ " govuk-textarea--error" if session.caseCommentBlankError }}" id="comment" name="comment" rows="5" aria-labelledby="comments-hint"></textarea>
-                    <button type="submit" id="save-comments" class="govuk-button" style="margin-bottom: 0 !important" data-module="govuk-button">Save</button>
+                    <button type="submit" id="save-comments" class="govuk-button case-comments-save-button" data-module="govuk-button">Save</button>
                     <input type="hidden" name="caseId" value="{{ data.caseId }}"/>
                 </form>
             </div>
 
             {% if data.caseComments | length %}
-                <form name="previousCommentsForm" method="post" action="summary/previousComments">
+                <form name="previousCommentsForm" method="post" action="summary/comments/{{ "hideOlderComments" if session.showPreviousComments === data.caseId else "showPreviousComments"}}">
                     <h2 class="govuk-heading-s">Comments</h2>
                     <table class="govuk-table" id="previousComments">
                         <tbody class="govuk-table__body">
@@ -220,9 +221,14 @@
                         <button type="submit" class="govuk-button govuk-button--secondary">Show all previous comments
                         </button>
                     {% endif %}
+                    {% if session.showPreviousComments === data.caseId %}
+                        <button type="submit" class="govuk-button govuk-button--secondary">Hide older comments
+                        </button>
+                    {% endif %}
                 </form>
             {% endif %}
         </div>
     </div>
+    {% endif %}
 
 {% endblock %}
