PIC-2373: add delete success notification

--- a/public/stylesheets/app/confirm-delete-box.scss
+++ b/public/stylesheets/app/confirm-delete-box.scss
@@ -1,8 +1,10 @@
 .confirm-delete-box {
     box-sizing: border-box;
     padding: 20px;
+    padding-top: 15px;
     height: border-box;
     background-color: #f3f2f1;
     border: 5px solid transparent;
-    height: 200px;
+    height: 220px;
+    width: 90%;
 }
