PIC-2373: refactor delete comment handler and add UT

--- a/server/views/confirm-delete-comment.njk
+++ b/server/views/confirm-delete-comment.njk
@@ -24,7 +24,7 @@
             <div class="govuk-grid-column-two-thirds">
                 <div class="confirm-delete-box">
                     <span class="govuk-caption-m govuk-!-padding-bottom-5">
-                        {{ author }} on {{ created }}
+                        Added on the {{ created }}
                     </span>
                     <span class="govuk-body">{{ comment }}
                 </div>
