--- a/public/stylesheets/app/_case-comments-custom.scss
+++ b/public/stylesheets/app/_case-comments-custom.scss
@@ -6,3 +6,18 @@
 .case-comments-save-button {
   margin-bottom: 0;
 }
+
+.confirm-delete-box {
+  box-sizing: border-box;
+  padding: 20px;
+  padding-top: 15px;
+  height: border-box;
+  background-color: #f3f2f1;
+  border: 5px solid transparent;
+  height: 220px;
+  width: 90%;
+}
+
+.case-comments-delete-success-notification {
+  margin-bottom: 30px;
+}
