--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -168,94 +168,7 @@
     </div>
 
     {% if enableCaseComments %}
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds" id="caseComments">
-            <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-            <h2 class="govuk-heading-m">Comments</h2>
-            {% if session.deleteCommentSuccess === data.caseId %}
-                {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
-                {% set html %}
-                    <span class="govuk-body-l">
-                        You successfully deleted a comment
-                    </span>
-                {% endset %}
-                {{ govukNotificationBanner({
-                    html: html,
-                    type: 'success',
-                    classes: 'case-comments-delete-success-notification'
-                }) }}
-            {% endif %}
-            <div class="govuk-form-group {{ "govuk-form-group--error" if session.caseCommentBlankError }}">
-                <div id="comments-hint">
-                    <p id="comments-hint-p1" class="govuk-body">
-                        Add notes and observations about this case. Your colleagues who use Prepare a Case will be able to read them.
-                    </p>
-                    <p id="comments-hint-p2" class="govuk-body govuk-!-margin-bottom-5">
-                        These comments will not be saved to NDelius.
-                    </p>
-                </div>
-                {% if session.caseCommentBlankError %}
-                    <p id="comment-error" class="govuk-error-message govuk-!-margin-bottom-4">
-                        <span class="govuk-visually-hidden">Error:</span> Enter a comment
-                    </p>
-                {% endif %}
-                <form method="post" action="summary/comments">
-                    <textarea class="govuk-textarea{{ " govuk-textarea--error" if session.caseCommentBlankError }}" id="comment" name="comment" rows="5" aria-labelledby="comments-hint"></textarea>
-                    <button type="submit" id="save-comments" class="govuk-button case-comments-save-button" data-module="govuk-button">Save</button>
-                    <input type="hidden" name="caseId" value="{{ data.caseId }}"/>
-                </form>
-            </div>
-
-            {% if data.caseComments | length %}
-                <form name="previousCommentsForm" method="post" action="summary/comments/{{ "hideOlderComments" if session.showPreviousComments === data.caseId else "showPreviousComments"}}">
-                    <h2 class="govuk-heading-s govuk-!-padding-top-0">Comments</h2>
-                    <table class="govuk-table" id="previousComments">
-                        <tbody class="govuk-table__body">
-                        {% if session.showPreviousComments === data.caseId %}
-                            {% set limitPreviousComments = data.caseComments | length %}
-                        {% else %}
-                            {% set limitPreviousComments = 6 %}
-                        {% endif %}
-                        {% for comment in data.caseComments | limit(limitPreviousComments) %}
-                            <tr class="govuk-table__row">
-                                <td class="govuk-table__cell">
-                                    <div class="govuk-grid-row">
-                                        <div class="govuk-grid-column-full govuk-!-padding-bottom-3">
-                                            {{ comment.comment }}
-                                        </div>
-                                    </div>
-                                    <div class="govuk-grid-row">
-                                        <div class="govuk-grid-column-one-half">
-                                            <span class="govuk-caption-m govuk-!-font-size-16">
-                                                {{ comment.author }} on {{ comment.created | caseCommentTimeFormat }}
-                                            </span>
-                                        </div>
-                                        <div class="govuk-grid-column-one-quarter">
-                                            {% if comment.createdByUuid === currentUserUuid %}
-                                            <a href="summary/comments/{{ comment.commentId }}/delete" class="govuk-link">
-                                                <span class="govuk-!-font-size-16 govuk-!-display-block">Delete</span>
-                                            </a>
-                                            {% endif %}
-                                        </div>
-                                    </div>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
-                    <input type="hidden" name="caseId" value="{{ data.caseId }}"/>
-                    {% if data.caseComments | length > limitPreviousComments %}
-                        <button type="submit" class="govuk-button govuk-button--secondary">Show all previous comments
-                        </button>
-                    {% endif %}
-                    {% if session.showPreviousComments === data.caseId %}
-                        <button type="submit" class="govuk-button govuk-button--secondary">Hide older comments
-                        </button>
-                    {% endif %}
-                </form>
-            {% endif %}
-        </div>
-    </div>
+        {% include "court-case-comments.njk" %}
     {% endif %}
 
 {% endblock %}
