--- a/server/views/court-case-comments.njk
+++ b/server/views/court-case-comments.njk
@@ -15,7 +15,7 @@
                 classes: 'case-comments-delete-success-notification'
             }) }}
         {% endif %}
-        <div class="govuk-form-group {{ "govuk-form-group--error" if session.caseCommentBlankError }}">
+        <div class="govuk-form-group govuk-!-margin-bottom-7 {{" govuk-form-group--error" if session.caseCommentBlankError }}">
             <div id="comments-hint">
                 <p id="comments-hint-p1" class="govuk-body">
                     Add notes and observations about this case. Your colleagues who use Prepare a Case will be able to read them.
@@ -38,7 +38,7 @@
 
         {% if data.caseComments | length %}
             <form name="previousCommentsForm" method="post" action="summary/comments/{{ "hideOlderComments" if session.showPreviousComments === data.caseId else "showPreviousComments"}}">
-                <h2 class="govuk-heading-s govuk-!-padding-top-0">Comments</h2>
+                <h2 class="govuk-heading-s govuk-!-padding-top-0 govuk-!-margin-bottom-2">Comments</h2>
                 <table class="govuk-table" id="previousComments">
                     <tbody class="govuk-table__body">
                     {% if session.showPreviousComments === data.caseId %}
