💬 Change Delivered to Completed
Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

--- a/server/views/case-summary-record.njk
+++ b/server/views/case-summary-record.njk
@@ -251,7 +251,7 @@
                     <h2 class="govuk-heading-m govuk-!-margin-top-6">Last pre-sentence report</h2>
                     <p class="govuk-body govuk-!-margin-bottom-0">{{ latestDocument.description }}</p>
                     <p class="govuk-hint govuk-!-margin-top-1">
-                        Delivered
+                        Completed
                         {% if monthsOld < 1 %}
                             less than 1 month
                         {% elseif monthsOld === 1 %}
