--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -38,11 +38,8 @@
 {% block caseContent %}
 
     <div class="govuk-grid-row">
-        <div class="govuk-grid-column-three-quarters">
+        <div class="govuk-grid-column-full">
             <h1 class="govuk-heading-l">Case summary</h1>
-        </div>
-        <div hidden class="govuk-grid-column-one-quarter">
-            <a class="govuk-link" href="{{ caseHistoryUrl }}">View case history (&#946;)</a>
         </div>
     </div>
 
@@ -108,7 +105,7 @@
                     </dd>
                 </div>
                 <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key>
+                    <dt class="govuk-summary-list__key">
                         Gender
                     </dt>
                     <dd class="govuk-summary-list__value">
@@ -167,7 +164,9 @@
         <div class="govuk-grid-column-one-third"></div>
     </div>
 
-    {% include "court-case-progress.njk" %}
+    {% if enableCaseProgress %}
+        {% include "court-case-progress.njk" %}
+    {% endif %}
 
     {% if enableCaseComments %}
         {% include "court-case-comments.njk" %}
