--- a/server/views/court-case-progress.njk
+++ b/server/views/court-case-progress.njk
@@ -2,7 +2,7 @@
     <div class="govuk-grid-column-two-thirds">
         <h2 class="govuk-heading-m" id="caseHearingsHeading">Case progress</h2>
         {% if data.hearings | length %}
-            <form name="previousCommentsForm" method="post" action="summary/hearings/{{ "hideOlderHearings" if session.showPreviousHearings === data.caseId else "showPreviousHearings"}}">
+            <form name="previousCommentsForm" id="caseHearingsForm" method="post" action="summary/hearings/{{ "hideOlderHearings" if session.showPreviousHearings === data.caseId else "showPreviousHearings"}}">
                 {% if session.showPreviousHearings === data.caseId %}
                     {% set limitPreviousHearings = data.hearings | length %}
                 {% else %}
