--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -38,11 +38,8 @@
 {% block caseContent %}
 
     <div class="govuk-grid-row">
-        <div class="govuk-grid-column-three-quarters">
+        <div class="govuk-grid-column-full">
             <h1 class="govuk-heading-l">Case summary</h1>
-        </div>
-        <div hidden class="govuk-grid-column-one-quarter">
-            <a class="govuk-link" href="{{ caseHistoryUrl }}">View case history (&#946;)</a>
         </div>
     </div>
 
@@ -166,6 +163,10 @@
         </div>
         <div class="govuk-grid-column-one-third"></div>
     </div>
+
+    {% if enableCaseProgress %}
+        {% include "court-case-progress.njk" %}
+    {% endif %}
 
     {% if enableCaseComments %}
         {% include "court-case-comments.njk" %}
