--- a/server/views/court-case-progress.njk
+++ b/server/views/court-case-progress.njk
@@ -48,7 +48,7 @@
                                                 text: "Add a note"
                                             }
                                         }) }}
-                                        <button type="submit" id="save-notes" data-module="govuk-button">Save</button>
+                                        <button class="govuk-button" type="submit" id="save-notes" data-module="govuk-button">Save</button>
                                     </div>
                                 </details>
                             </div>
